# xformat

./: LICENSE  Setup.lhs  xformat.cabal
bench/: Main.hs  ShowGADT.hs
src/Text/XFormat/: Common.hs  Read.hs  Show.hs
test/: Read.hs  Show.hs
tests/: Main.hs  Show.hs
