name:                   xformat
version:                0.1
synopsis:               Extensible, typed, scanf- and printf-like functions for
                        formatted reading and showing
homepage:               http://github.com/spl/xformat/tree/master
description:

  This package is composed of two functions for formatted conversion between
  strings and typed values. Each is defined as a type-indexed function using a
  type class with multiple parameters and functional dependencies along with
  format descriptors.
  .
  "Text.XFormat.Read" allows one to parse values from a formatted string. Its
  functionality is similar to the C @scanf@ function. Unlike @scanf@, however,
  the format descriptor is well-typed, ensuring that the output type is
  statically known.
  .
  "Text.XFormat.Show" allows one to print values to a formatted string. Its
  functionality is similar to the C @printf@ function. Unlike @printf@, however,
  the format descriptor is well-typed, ensuring that the variable number
  arguments are statically known.
  .
  These functions can be easily extended to support new formats and new types.
  Extension is simple: define a format descriptor and an instance of the
  appropriate class.

category:               Text
copyright:              (c) 2009 Sean Leather
license:                BSD3
license-file:           LICENSE
author:                 Sean Leather,
maintainer:             leather@cs.uu.nl
stability:              experimental
build-type:             Custom
cabal-version:          >= 1.2.1
tested-with:            GHC == 6.8.3, GHC == 6.10.1

--------------------------------------------------------------------------------

Library
  hs-source-dirs:       src

  exposed-modules:      Text.XFormat.Read
                        Text.XFormat.Show

  other-modules:        Text.XFormat.Common

  build-depends:        base >= 3.0 && < 5.0

  ghc-options:          -Wall -O2

